# FridayNightFunkinC__Engine

./: .gitignore  CMakeLists.txt
resources/assets/data/characters/: bf.json
src/: includes.hpp  main.cpp  musicHandler.cpp  musicHandler.hpp  spriteHandler.cpp  spriteHandler.hpp
